--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
     "antd": "^5.11.1",
+    "autoprefixer": "^10.4.16",
     "less": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
